# SpinbotStationsClient

./: .gitignore  README.md  pyproject.toml
scripts/: script.py
src/SpinbotStations/: __init__.py
src/SpinbotStations/imagestation/: __init__.py  image_station.py
src/SpinbotStations/sdc/: __init__.py  sdc.py
src/SpinbotStations/utils/: utils.py
