[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SpinbotStationsClient"  # placeholder — rename this
version = "0.1.0"
description = "This package is for interfacing with the custom spinbot stations"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [
    { name = "Addison Blackwelder", email = "abblackw@ncsu.edu" }
]
classifiers = [
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/ddomlab/SpinbotStationsClient"
Repository = "https://github.com/ddomlab/SpinbotStationsClient"

[tool.hatch.build.targets.wheel]
packages = ["src/SpinbotStations"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py314"